new data version, added closed stations, tridy up test config support for closures